# base91

./: CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
benches/: base91.rs
src/: helpers.rs  lib.rs
src/codemap/: canonical.rs  mod.rs  xml_friendly.rs
src/iter/: decode.rs  encode.rs  mod.rs
